CRUD para operaciones actuales (sensores, registro_usuarios)

--- a/Frontend/Inicio_de_sesion/Crear_cuenta/cuenta.html
+++ b/Frontend/Inicio_de_sesion/Crear_cuenta/cuenta.html
@@ -3,7 +3,7 @@
   <form id="signupForm">
     <div class="Rectangle1" style="width: 711px; height: 720px; left: 107px; top: 69px; position: absolute; background: white; border-radius: 34px; border: 4px #344E41 solid"></div>
 
-    <input type="text" id="nombre" placeholder="Nombre completo" required
+    <input type="text" id="nombre" placeholder="Nombre..." required
       style="position: absolute; width: 417px; height: 45px; left: 198.83px; top: 190.50px; border: 1px solid #344E41; border-radius: 6px; font-size: 15px;" />
     <input type="text" id="apellido" placeholder="Apellidos..." required
       style="position: absolute; width: 417px; height: 45px; left: 198.83px; top: 280.50px; border: 1px solid #344E41; border-radius: 6px; font-size: 15px;" />
