Visualizacion de datos meteorologicos por parcela en monitoreo de cultivos y creacion de carpetas guia

--- a/Frontend/Inicio_de_sesion/Iniciar_sesion/sesion.html
+++ b/Frontend/Inicio_de_sesion/Iniciar_sesion/sesion.html
@@ -75,12 +75,12 @@
               return;
             }
     
-            window.location.href = "/Frontend/Inicio Tecnico/inicio_tecnico.html";
+            window.location.href = "/Frontend/Tecnico/Inicio/inicio_tecnico.html";
     
           } else if (rol === "agronomo") {
-            window.location.href = "/Frontend/Inicio Agronomo/inicio_agronomo.html";
+            window.location.href = "/Frontend/Agronomo/Inicio/inicio_agronomo.html";
           } else if (rol === "agricultor") {
-            window.location.href = "/Frontend/Inicio Agricultor/inicio_agricultor.html";
+            window.location.href = "/Frontend/Agricultor/Inicio/inicio_agricultor.html";
           } else {
             alert("Rol no reconocido");
           }
