Visualizacion de graficos por parcela y sus sensores

--- a/Frontend/Tecnico/Configuracion_del_sistema/configuracion.html
+++ b/Frontend/Tecnico/Configuracion_del_sistema/configuracion.html
@@ -151,7 +151,7 @@
     <input type="number" id="lngSensorManual" step="0.000001" placeholder="-70.6693" />
     <button onclick="agregarPuntoSensorManual()" style="margin-left: 10px;">📌 Agregar punto manual</button>
 
-    <!-- Tooltip ícono + texto -->
+    <!--Icono + texto -->
     <div class="tooltip-wrapper" style="display: inline-block; position: relative; margin-left: 10px;">
       <span class="info-icon" style="font-size: 18px; cursor: pointer; border: 1px solid gray; border-radius: 50%; padding: 1px 6px;">i</span>
 
@@ -179,7 +179,6 @@
   </script>
 
 
-  <!-- Campo oculto para coordenadas -->
   <input type="hidden" id="sensorCoords" name="sensorCoords" />
 
   <!-- Botón -->
