--- a/Frontend/Agronomo/Analisis_de_datos/analisis.html
+++ b/Frontend/Agronomo/Analisis_de_datos/analisis.html
@@ -1,36 +1,4 @@
-<div data-layer="Agronomo Análisis detallado  de Datos" class="AgronomoAnLisisDetalladoDeDatos" style="width: 1540px; height: 2298px; position: relative; background: #FBF9F4; overflow: hidden">
-  <!--Fonde Verde oscuro-->
-  <div data-layer="Rectangle 59" class="Rectangle59" style="width: 1541px; height: 1277.88px; left: 0px; top: 1020.12px; position: absolute; background: #344E41"></div>
-
-  <!--Seleccion de parcela y fechas-->
-  <div data-layer="Rectangle 58" class="Rectangle58" style="width: 1540px; height: 117.12px; left: 0.41px; top: 903px; position: absolute; background: #588157"></div>
-  <div data-layer="Rectangle 49" class="Rectangle49" style="width: 296.14px; height: 61.38px; left: 90.60px; top: 930.87px; position: absolute; background: #D9D9D9; border-radius: 5px; border: 2px black solid"></div>
-  <div data-layer="Rectangle 49" class="Rectangle49" style="width: 296.14px; height: 61.38px; left: 1147.29px; top: 930.73px; position: absolute; background: #D9D9D9; border-radius: 5px; border: 2px black solid"></div>
-  <div data-layer="Rango de Fechas..." class="RangoDeFechas" style="width: 277.56px; height: 44.25px; left: 1165.88px; top: 939.30px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #858D85; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">Rango de Fechas...</div>
-  <img data-layer="ordenar-abajo 3" class="OrdenarAbajo3" style="width: 19.88px; height: 19.88px; left: 1399.95px; top: 951.42px; position: absolute" src="imagenes/ordenar-abajo.png" />
-  <div data-layer="Seleccione Parcela..." class="SeleccioneParcela" style="width: 277.56px; height: 44.25px; left: 109.18px; top: 939.43px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #858D85; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">Seleccione Parcela...</div>
-  <img data-layer="ordenar-abajo 3" class="OrdenarAbajo3" style="width: 19.88px; height: 19.88px; left: 343.25px; top: 951.55px; position: absolute" src="imagenes/ordenar-abajo.png" />
-  <div data-layer="Rectangle 63" class="Rectangle63" style="width: 299.51px; height: 74.46px; left: 39.74px; top: 1736.12px; position: absolute; background: #A3B18A; border-radius: 10px; border: 2px black solid"></div>
-  <div data-layer="Rectangle 60" class="Rectangle60" style="width: 1460.31px; height: 251.41px; left: 39.74px; top: 1793.17px; position: absolute; background: #D9D9D9; border: 2px black solid"></div>
-  <div data-layer="ANÁLISIS DE TENDENCIAS" class="AnLisisDeTendencias" style="width: 277.56px; height: 44.25px; left: 61.70px; top: 1744.35px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">ANÁLISIS DE TENDENCIAS</div>
-  <div data-layer="Texto generado por la IA  Anomalias - Patroness" class="TextoGeneradoPorLaIaAnomaliasPatroness" style="width: 1459.90px; height: 128px; left: 40.15px; top: 1843.87px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Texto generado por la IA<br/>   Anomalias - Patroness</div>
-  
-  <!--Mapa-->
-  <div data-layer="Rectangle 64" class="Rectangle64" style="width: 290.93px; height: 74.46px; left: 854.37px; top: 1106.07px; position: absolute; background: #A3B18A; border-radius: 10px; border: 2px black solid"></div>
-  <div data-layer="Rectangle 61" class="Rectangle61" style="width: 645.54px; height: 484.10px; left: 854.50px; top: 1163.11px; position: absolute; background: #D9D9D9; border: 2px black solid"></div>
-  <div data-layer="MAPA" class="Mapa" style="width: 277.56px; height: 44.25px; left: 875.74px; top: 1114.30px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">MAPA</div>
-  
-  <!--Grafico-->
-  <div data-layer="Rectangle 63" class="Rectangle63" style="width: 290.93px; height: 74.46px; left: 39.74px; top: 1106.07px; position: absolute; background: #A3B18A; border-radius: 10px; border: 2px black solid"></div>
-  <div data-layer="Rectangle 60" class="Rectangle60" style="width: 775.02px; height: 484.10px; left: 39.74px; top: 1163.11px; position: absolute; background: #D9D9D9; border: 2px black solid"></div>
-  <div data-layer="GRÁFICO" class="GrFico" style="width: 277.56px; height: 44.25px; left: 61.70px; top: 1114.30px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">GRÁFICO</div>
-  
-  <!--Botones de exportacion y consulta AI-->
-  <div data-layer="Rectangle 63" class="Rectangle63" style="width: 318.15px; height: 74.46px; left: 1181.89px; top: 2133.97px; position: absolute; background: #A3B18A; border-radius: 10px; border: 2px black solid"></div>
-  <div data-layer="CONSULTA IA" class="ConsultaIa" style="width: 318.15px; height: 44.25px; left: 1181.89px; top: 2149.07px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 20px; font-family: Instrument Sans; font-weight: 400; text-decoration: underline; word-wrap: break-word">CONSULTA IA</div>
-  <div data-layer="Rectangle 63" class="Rectangle63" style="width: 318.15px; height: 74.46px; left: 39.23px; top: 2133.97px; position: absolute; background: #A3B18A; border-radius: 10px; border: 2px black solid"></div>
-  <div data-layer="EXPORTAR DATOS" class="ExportarDatos" style="width: 318.15px; height: 44.25px; left: 39.23px; top: 2149.07px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 20px; font-family: Instrument Sans; font-weight: 400; word-wrap: break-word">EXPORTAR DATOS</div>
-  
+<div data-layer="Agronomo Análisis detallado  de Datos" class="AgronomoAnLisisDetalladoDeDatos" style="width: 1540px; height: 2820px; position: relative; background: #FBF9F4; overflow: hidden">
   <!--Principal-->
   <div data-layer="EcoSmart" class="Ecosmart" style="width: 344px; height: 106px; left: 23.41px; top: 77px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
   <img data-layer="plantacion (6)" class="Plantacion6" style="width: 76px; height: 76px; left: 157.41px; top: 39px; position: absolute" src="imagenes/plantacion (6).png" />
@@ -40,4 +8,86 @@
   <div data-layer="Agrónomo" class="AgrNomo" style="width: 127px; height: 45px; left: 1336.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agrónomo</div>
   <div data-layer="Atrás" class="AtrS" style="width: 127px; height: 45px; left: 1160.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás</div>
   <div data-layer="Análisis detallado de Datos" class="AnLisisDetalladoDeDatos" style="width: 1061.33px; height: 272px; left: 45.41px; top: 183px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Análisis detallado  <br/><br/><br/>de Datos</div>
+
+  <!-- Selector de Parcela -->
+  <div style="margin-top: 935px; padding: 20px; background-color: #F0EFEB; border-radius: 20px;">
+  
+  <div style="flex: 1; min-width: 300px;">
+    <label for="parcelaAsociada" style="font-size: 20px;">Parcela:</label><br />
+    <select id="parcelaAsociada" class="choices-select" style="width: 100%; padding: 10px; font-size: 16px;">
+      <option value="">Seleccione una parcela</option>
+    </select>
+  </div>
+
+<!-- Contenedor: Datos + Mapa lado a lado -->
+<div style="margin-top: 20px; padding: 20px; background-color: #F0EFEB; border-radius: 20px; display: flex; gap: 30px; align-items: flex-start;">
+
+  <!-- Datos de la parcela -->
+  <div id="infoParcela" style="flex: 1; font-family: IBM Plex Mono; font-size: 18px; color: #344E41;">
+    <h1 style="margin-bottom: 10px;">Datos de la Parcela</h1>
+    <h3><strong>Nombre:</strong> <span id="info-nombre">—</span></h3>
+    <h3><strong>Parcela Nº:</strong> <span id="info-numero">—</span></h3>
+    <h3><strong>Ubicación:</strong> <span id="info-ubicacion">—</span></h3>
+    <h3><strong>Cultivo:</strong> <span id="info-cultivo">—</span></h3>
+
+
+  </div>
+
+  <!-- Mapa cuadrado reducido -->
+  <div style="flex: 1;">
+    <div id="mapaParcela" style="height: 300px; width: 900px; border-radius: 10px; border: 2px solid #344E41;"></div>
+  </div>
+</div>
+
+<!-- Leaflet -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+  
+  </div>
+
+
+
+    <!-- Sección de Gráficos -->
+  <div style="margin-top: 25px; padding: 20px; background-color: #DAD7CD; border-radius: 20px;">
+    <h2 style="font-family: IBM Plex Mono; font-size: 36px; color: #344E41;">Visualización de Datos</h2>
+
+    <!-- Fila 1: Temperatura y Humedad -->
+    <div style="display: flex; justify-content: space-between; gap: 20px; margin-top: 20px;">
+      <div style="flex: 1;">
+        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">Temperatura Promedio</h3>
+        <canvas id="graficoTemperatura" width="400" height="250"></canvas>
+      </div>
+      <div style="flex: 1;">
+        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">Humedad del Suelo</h3>
+        <canvas id="graficoHumedad" width="400" height="250"></canvas>
+      </div>
+    </div>
+
+    <!-- Fila 2: pH y Nutrientes -->
+    <div style="display: flex; justify-content: space-between; gap: 20px; margin-top: 40px;">
+      <div style="flex: 1;">
+        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">pH del Suelo</h3>
+        <canvas id="graficoPh" width="400" height="250"></canvas>
+      </div>
+      <div style="flex: 1;">
+        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">Nivel de Nutrientes</h3>
+        <canvas id="graficoNutrientes" width="400" height="250"></canvas>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+  </div>
+
+  <div style="margin-top: 30px; text-align: center;">
+    <button id="btnExportarCSV" style="margin-top: 30px; padding: 10px 20px; font-size: 16px; font-family: IBM Plex Mono; background-color: #344E41; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      Exportar datos
+    </button>
+
+  </div>
+
+
+
+  <script src="datos.js"></script>
 </div>
