--- a/Frontend/Agricultor/Recomendaciones/recomendaciones.html
+++ b/Frontend/Agricultor/Recomendaciones/recomendaciones.html
@@ -6,7 +6,10 @@
   <!-- Principal -->
   <img data-layer="Imagen Cultivo" class="ImagenCultivo" style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
   <div data-layer="Recomendaciones" class="Recomendaciones" style="width: 880.88px; height: 106px; left: 68px; top: 257px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Recomendaciones</div>
-  <div data-layer="Atrás" class="AtrS" style="width: 127px; height: 45px; left: 1143px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás</div>
+  <a href="/Frontend/Agricultor/Inicio/inicio_agricultor.html"
+    style="width: 96.62px; height: 45px; left: 1173px; top: 50px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
+    Atrás
+  </a>  
   <div data-layer="Rectangle 1" class="Rectangle1" style="width: 223px; height: 72px; left: 1270px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img data-layer="avatar" class="Avatar" style="width: 37px; height: 37px; left: 1287px; top: 56px; position: absolute" src="imagenes/avatar.png" />
   <div data-layer="Agricultor" class="Agricultor" style="width: 127px; height: 45px; left: 1336px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agricultor</div>
