--- a/Frontend/Agronomo/Analisis_de_datos/analisis.html
+++ b/Frontend/Agronomo/Analisis_de_datos/analisis.html
@@ -6,7 +6,10 @@
   <div data-layer="Rectangle 1" class="Rectangle1" style="width: 223px; height: 72px; left: 1270.41px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img data-layer="avatar" class="Avatar" style="width: 37px; height: 37px; left: 1287.41px; top: 56px; position: absolute" src="imagenes/avatar.png" />
   <div data-layer="Agrónomo" class="AgrNomo" style="width: 127px; height: 45px; left: 1336.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agrónomo</div>
-  <div data-layer="Atrás" class="AtrS" style="width: 127px; height: 45px; left: 1160.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás</div>
+
+  <a href="/Frontend/Agronomo/Inicio/inicio_agronomo.html"
+    style="width: 127px; height: 45px; left: 1160.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás
+  </a>
   <div data-layer="Análisis detallado de Datos" class="AnLisisDetalladoDeDatos" style="width: 1061.33px; height: 272px; left: 45.41px; top: 183px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Análisis detallado  <br/><br/><br/>de Datos</div>
 
   <!-- Selector de Parcela -->
