--- a/Frontend/Tecnico/Ajuste_de_parametros/ajuste.html
+++ b/Frontend/Tecnico/Ajuste_de_parametros/ajuste.html
@@ -6,7 +6,14 @@
   <div data-layer="Rectangle 1" class="Rectangle1" style="width: 223px; height: 72px; left: 1270px; top: 38px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img data-layer="avatar" class="Avatar" style="width: 37px; height: 37px; left: 1287px; top: 55px; position: absolute" src="imagenes/avatar.png" />
   <div data-layer="Técnico" class="TCnico" style="width: 127px; height: 45px; left: 1336px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Técnico</div>
-  <div data-layer="Atrás" class="AtrS" style="width: 127px; height: 45px; left: 1160px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás</div>
+  
+  <!--Navegacion paginas-->
+  <a href="/Frontend/Tecnico/Inicio/inicio_tecnico.html"
+    style="width: 127px; height: 45px; left: 1160px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
+    Atrás
+  </a>
+  <!---------------------->
+  
   <div data-layer="Ajuste de parámetros de simulación" class="AjusteDeParMetrosDeSimulaciN" style="width: 1417px; height: 272px; left: 76px; top: 164px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Ajuste de parámetros de<br/><br/><br/><br/>simulación</div>
  
   <!--Fonde Verde oscuro-->
