--- a/Frontend/Agricultor/Inicio/inicio_agricultor.html
+++ b/Frontend/Agricultor/Inicio/inicio_agricultor.html
@@ -1,7 +1,10 @@
 <div style="width: 1540px; height: 1801px; position: relative; background: #FBF9F4; overflow: hidden">
     <div style="width: 1201px; height: 241px; left: 190px; top: 911px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 48px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Con EcoSmart tienes información oportuna<br/><br/>para la toma de desiciones del control de<br/> <br/>tu cosecha</div>
     <div style="width: 645px; height: 541px; left: 812px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
-    <div style="width: 401px; height: 89px; left: 934px; top: 1222px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Alertas</div>
+    <a href="/Frontend/Agricultor/Alertas/alertas.html"
+     style="width: 401px; height: 89px; left: 934px; top: 1222px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
+     Alertas
+    </a>
     <img style="width: 116px; height: 116px; left: 1077px; top: 1357px; position: absolute" src="imagenes/alerta verde.png" />
     <div style="width: 625px; height: 128px; left: 822px; top: 1547px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Controla y protege tus cultivos configurando tus propios rangos de monitoreo. El sistema te alertará automáticamente cuando los datos de tus sensores superen los límites que definas como seguros.</div>
     <div style="width: 645px; height: 541px; left: 82px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
