--- a/Frontend/Agronomo/Asistente_IA/chat_ia.html
+++ b/Frontend/Agronomo/Asistente_IA/chat_ia.html
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>EcoSmart - Asistente IA</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&family=Roboto&display=swap" rel="stylesheet">
+  <title></title>
   <style>
     body {
       margin: 0;
@@ -83,7 +81,7 @@
     }
 
     #enviarBtn {
-      background-color: #344E41;
+      background-color: #A3B18A;
       color: white;
       border: none;
       border-radius: 10px;
@@ -102,20 +100,39 @@
 
     .boton-funcional {
       background-color: white;
-      border: 1px solid #344E41;
+      border: 1px solid #A3B18A;
       border-radius: 30px;
       padding: 10px 20px;
       cursor: pointer;
       font-size: 14px;
-      color: #344E41;
+      color: #000000;
     }
 
   </style>
 </head>
 <body>
   <header>
-    <h1>EcoSmart</h1>
-    <span>Agrónomo</span>
+    <div style="display: flex; align-items: center;">
+    <img src="imagenes/plantacion (6).png" alt="Logo EcoSmart" 
+    style="width: 76px; height: 76px; margin-right: 15px;" />
+</div>
+
+<div style="display: flex; align-items: center; gap: 10px;">
+
+<!--Navegacion paginas-->
+  <a href="/Frontend/Agronomo/Inicio/inicio_agronomo.html"
+     style="color: white; font-size: 20px; font-family: 'IBM Plex Mono', monospace; font-weight: 700; text-decoration: underline;">
+    Atrás
+  </a>
+<!---------------------->
+
+  <div style="width: 223px; height: 72px; background: #588157; border-radius: 28px; display: flex; align-items: center; padding-left: 15px;">
+    <img src="imagenes/avatar.png" alt="Avatar" style="width: 37px; height: 37px;" />
+    <div style="color: white; font-size: 20px; font-family: 'IBM Plex Mono', monospace; font-weight: 700; margin-left: 10px;">Agrónomo</div>
+  </div>
+</div>
+
+
   </header>
 
   <main class="chat-container">
