--- a/Frontend/Agronomo/Estrategias_de_cultivo/estrategias.html
+++ b/Frontend/Agronomo/Estrategias_de_cultivo/estrategias.html
@@ -50,6 +50,13 @@
   <div data-layer="Rectangle 1" class="Rectangle1" style="width: 223px; height: 72px; left: 1270px; top: 38px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img data-layer="avatar" class="Avatar" style="width: 37px; height: 37px; left: 1287px; top: 55px; position: absolute" src="imagenes/avatar.png" />
   <div data-layer="Agrónomo" class="AgrNomo" style="width: 127px; height: 45px; left: 1336px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agrónomo</div>
-  <div data-layer="Atrás" class="AtrS" style="width: 127px; height: 45px; left: 1143px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás</div>
+  
+  <!--Navegacion paginas-->
+  <a href="/Frontend/Agronomo/Inicio/inicio_agronomo.html"
+    style="width: 127px; height: 45px; left: 1143px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
+    Atrás
+  </a>
+  <!---------------------->
+
   <div data-layer="Estrategias de Cultivo" class="EstrategiasDeCultivo" style="width: 836.61px; height: 272px; left: 94.95px; top: 182px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Estrategias de <br/><br/><br/><br/>Cultivo</div>
 </div>
