--- a/Frontend/Agricultor/Inicio/inicio_agricultor.html
+++ b/Frontend/Agricultor/Inicio/inicio_agricultor.html
@@ -13,7 +13,7 @@
       Monitoreo de<br/><br/>Cultivos
     </a>
     <img style="width: 185px; height: 185px; left: 312px; top: 1327px; position: absolute" src="imagenes/analisis-de-los-datos.png" />
-    <div style="width: 589px; height: 128px; left: 112px; top: 1543px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Obtén datos precisos y en tiempo real sobre las condiciones clave de tus plantas, como temperatura, humedad, pH y luz solar, para tomar decisiones informadas.</div>
+    <div style="width: 589px; height: 128px; left: 112px; top: 1543px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Obtén datos precisos y en tiempo real sobre las condiciones clave de tus plantas, como temperatura, humedad, pH y nutrientes, para tomar decisiones informadas.</div>
     <div style="width: 344px; height: 106px; left: 23px; top: 77px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
     <img style="width: 76px; height: 76px; left: 157px; top: 39px; position: absolute" src="imagenes/plantacion (6).png" />
     <img style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
