--- a/Frontend/Tecnico/Inicio/inicio_tecnico.html
+++ b/Frontend/Tecnico/Inicio/inicio_tecnico.html
@@ -4,12 +4,12 @@
   
   <!--Navegacion paginas-->
   <a href="/Frontend/Tecnico/Configuracion_del_sistema/configuracion.html"
-    style="width: 401px; height: 89px; left: 198px; top: 1206px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
+    style="width: 401px; height: 89px; left: 198px; top: 1220px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
     Configuración del sistema
   </a>
   <!---------------------->
 
-  <div data-layer="Agrega parcelas, sensores y define alertas clave para comenzar a monitorear tus cultivos." class="AgregaParcelasSensoresYDefineAlertasClaveParaComenzarAMonitorearTusCultivos" style="width: 589px; height: 128px; left: 112px; top: 1550px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Agrega parcelas, sensores y define alertas clave para comenzar a monitorear tus cultivos.</div>
+  <div data-layer="Agrega, modifica o elimina parcelas y sensores." class="AgregaParcelasSensores" style="width: 589px; height: 128px; left: 112px; top: 1550px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Agrega, modifica o elimina parcelas y sensores.</div>
   <div data-layer="datos 1" class="Datos1" style="width: 186.06px; height: 186.06px; left: 305.47px; top: 1357.47px; position: absolute"></div>
   <div data-layer="Rectangle 24" class="Rectangle24" style="width: 1373px; height: 541px; left: 84px; top: 1818px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
   
@@ -20,18 +20,18 @@
   </a>
   <!---------------------->
 
-  <div data-layer="Ajusta los valores de sensores para simular distintas condiciones de cultivo y probar el sistema." class="AjustaLosValoresDeSensoresParaSimularDistintasCondicionesDeCultivoYProbarElSistema" style="width: 1253.79px; height: 128px; left: 147.86px; top: 2180px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Ajusta los valores de sensores para simular distintas condiciones de cultivo y probar el sistema.</div>
+  <div data-layer="Ajusta los valores de sensores para simular distintas condiciones de cultivo y probar el sistema." class="AjustaLosValoresDeSensoresParaSimularDistintasCondicionesDeCultivoYProbarElSistema" style="width: 1253.79px; height: 128px; left: 147.86px; top: 2180px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Ajusta los valores de sensores para simular distintas condiciones de cultivo.</div>
   <div data-layer="inversion (1)" class="Inversion1" style="width: 169.04px; height: 169.04px; left: 685.48px; top: 1971.99px; position: absolute"></div>
   <div data-layer="Rectangle 25" class="Rectangle25" style="width: 645px; height: 541px; left: 812px; top: 1180px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
   
   <!--Navegacion paginas-->
-  <a href="/Frontend/Tecnico/Mantenimiento/mantenimiento.html"
+  <a href="/Frontend/Tecnico/Configuracion_de_alertas/configuracion_alertas.html"
     style="width: 444px; height: 89px; left: 913px; top: 1220px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
-    Mantenimiento
+    Configuración de Alertas
   </a>
   <!---------------------->
 
-  <div data-layer="Gestiona el mantenimiento de sensores y del sistema, con alertas y registros programados." class="GestionaElMantenimientoDeSensoresYDelSistemaConAlertasYRegistrosProgramados" style="width: 589.68px; height: 128px; left: 833.66px; top: 1550px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Gestiona el mantenimiento de sensores y del sistema, con alertas y registros programados.</div>
+  <div data-layer="Crea alertas personalizadas según tus necesidades para comenzar a monitorear tus cultivos." class="configuraAlertas" style="width: 589.68px; height: 128px; left: 833.66px; top: 1550px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Crea alertas personalizadas según tus necesidades para comenzar a monitorear tus cultivos.</div>
   <div data-layer="bot (3)" class="Bot3" style="width: 186.06px; height: 186.06px; left: 1041.47px; top: 1341.88px; position: absolute"></div>
   <div data-layer="EcoSmart" class="Ecosmart" style="width: 344px; height: 106px; left: 23px; top: 76px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
   <img data-layer="plantacion (6)" class="Plantacion6" style="width: 76px; height: 76px; left: 157px; top: 38px; position: absolute" src="imagenes/plantacion (6).png" />
