--- a/Frontend/Agronomo/Asistente_IA/chat_ia.html
+++ b/Frontend/Agronomo/Asistente_IA/chat_ia.html
@@ -128,7 +128,13 @@
 
   <div style="width: 223px; height: 72px; background: #588157; border-radius: 28px; display: flex; align-items: center; padding-left: 15px;">
     <img src="imagenes/avatar.png" alt="Avatar" style="width: 37px; height: 37px;" />
-    <div style="color: white; font-size: 20px; font-family: 'IBM Plex Mono', monospace; font-weight: 700; margin-left: 10px;">Agrónomo</div>
+    <div id="nombre-usuario" style="color: white; font-size: 20px; font-family: 'IBM Plex Mono', monospace; font-weight: 700; margin-left: 10px;">Agrónomo</div>
+    <script>
+    const nombre = localStorage.getItem("nombreUsuario");
+    if (nombre) {
+      document.getElementById("nombre-usuario").textContent = nombre;
+    }
+    </script>
   </div>
 </div>
 
