--- a/Frontend/Tecnico/Configuracion_del_sistema/configuracion.html
+++ b/Frontend/Tecnico/Configuracion_del_sistema/configuracion.html
@@ -1,12 +1,18 @@
-<div data-layer="Tecnico Configuración del sistema" class="TecnicoConfiguraciNDelSistema" style="width: 1540px; position: relative; background: #FBF9F4; overflow-x: hidden;">
+<div data-layer="Tecnico Configuración del sistema" class="TecnicoConfiguraciNDelSistema" 
+style="width: 1540px; position: relative; background: #FBF9F4; overflow-x: hidden;">
   <!-- Principal -->
   <div data-layer="EcoSmart" class="Ecosmart" style="width: 344px; height: 106px; left: 23px; top: 76px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
   <img data-layer="plantacion (6)" class="Plantacion6" style="width: 76px; height: 76px; left: 157px; top: 38px; position: absolute" src="imagenes/plantacion (6).png" />
   <img data-layer="Imagen Cultivo" class="ImagenCultivo" style="width: 1597.01px; height: 674px; left: 0px; top: 229px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
   <div data-layer="Rectangle 1" class="Rectangle1" style="width: 223px; height: 72px; left: 1270px; top: 38px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img data-layer="avatar" class="Avatar" style="width: 37px; height: 37px; left: 1287px; top: 55px; position: absolute" src="imagenes/avatar.png" />
-  <div data-layer="Técnico" class="TCnico" style="width: 127px; height: 45px; left: 1336px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Técnico</div>
-  
+  <div id="nombre-usuario" class="TCnico" style="width: 127px; height: 45px; left: 1336px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Técnico</div>
+  <script>
+  const nombre = localStorage.getItem("nombreUsuario");
+  if (nombre) {
+    document.getElementById("nombre-usuario").textContent = nombre;
+  }
+  </script>  
   <!--Navegacion paginas-->
   <a href="/Frontend/Tecnico/Inicio/inicio_tecnico.html"
     style="width: 127px; height: 45px; left: 1160px; top: 51px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">
@@ -368,7 +374,7 @@
   Historial de Parcelas y Sensores
   -------------------------------- 
   -->
-  <div style="margin-top: 22px; padding: 30px; background: #344E41; border-radius: 20px; color: white; font-family: IBM Plex Mono;">
+  <div style="margin-top: 22px; padding: 30px; background: #344E41; border-radius: 20px; color: white; font-family: IBM Plex Mono; min-height: 200px;">
     <h2 style="font-size: 45px; text-align: center; margin-bottom: 20px;">Historial</h2>
     <div style="text-align: center;">
       <button id="btn-ver-parcelas" style="font-size: 18px; padding: 10px 20px; border-radius: 8px; border: none; background: #A3B18A; color: black; font-weight: bold; cursor: pointer;">
@@ -382,6 +388,20 @@
 
   </div>
 
+  <!-- 
+  ---------------------------------
+  Botón de Configuración de Usuarios 
+  -----------------------------------
+  -->
+  <div style="margin-top: 22px; padding: 30px; background: #344E41; border-radius: 20px; color: white; font-family: IBM Plex Mono; min-height: 80px;">
+
+    <div style="margin-top: 15px; text-align: center;">
+      <a href="/Frontend/Tecnico/Configuracion_usuarios/usuarios.html"
+        style="font-size: 18px; padding: 12px 24px; border-radius: 10px; background-color: #A3B18A; color: black; font-weight: bold; text-decoration: none; display: inline-block;">
+        Configuraciones de usuarios
+      </a>
+    </div>
+  </div>
 
 </div>
 
