--- a/Frontend/Agricultor/Inicio/inicio_agricultor.html
+++ b/Frontend/Agricultor/Inicio/inicio_agricultor.html
@@ -1,31 +1,54 @@
 <div style="width: 1540px; height: 1801px; position: relative; background: #FBF9F4; overflow: hidden">
-    <div style="width: 1201px; height: 241px; left: 190px; top: 911px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 48px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Con EcoSmart tienes información oportuna<br/><br/>para la toma de desiciones del control de<br/> <br/>tu cosecha</div>
-    <div style="width: 645px; height: 541px; left: 812px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
-    <a href="/Frontend/Agricultor/Alertas/alertas.html"
-     style="width: 401px; height: 89px; left: 934px; top: 1222px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
-     Alertas
-    </a>
-    <img style="width: 116px; height: 116px; left: 1077px; top: 1357px; position: absolute" src="imagenes/alerta verde.png" />
-    <div style="width: 625px; height: 128px; left: 822px; top: 1547px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Controla y protege tus cultivos configurando tus propios rangos de monitoreo. El sistema te alertará automáticamente cuando los datos de tus sensores superen los límites que definas como seguros.</div>
-    <div style="width: 645px; height: 541px; left: 82px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
-    <a href="/Frontend/Agricultor/Monitoreo_de_Cultivos/monitoreo.html"
-      style="width: 401px; height: 89px; left: 198px; top: 1207px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
-      Monitoreo de<br/><br/>Cultivos
-    </a>
-    <img style="width: 185px; height: 185px; left: 312px; top: 1327px; position: absolute" src="imagenes/analisis-de-los-datos.png" />
-    <div style="width: 589px; height: 128px; left: 112px; top: 1543px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Obtén datos precisos y en tiempo real sobre las condiciones clave de tus plantas, como temperatura, humedad, pH y nutrientes, para tomar decisiones informadas.</div>
-    <div style="width: 344px; height: 106px; left: 23px; top: 77px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
-    <img style="width: 76px; height: 76px; left: 157px; top: 39px; position: absolute" src="imagenes/plantacion (6).png" />
-    <img style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
-    <div style="width: 1077px; height: 368px; left: 43px; top: 162px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">EcoSmart nace como respuesta a desafíos como el cambio climático,  la escasez de recursos hídricos y reducir el impacto ambiental de las <br/>prácticas agrícolas tradicionales, proporcionando una <br/>plataforma integral que aprovecha tecnologías de <br/>vanguardia para revolucionar la forma en que <br/>se gestiona la agricultura, desde pequeñas <br/>explotaciones hasta operaciones <br/>comerciales a gran <br/>escala.</div>
-    <div style="width: 223px; height: 72px; left: 1270px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
-    <img style="width: 37px; height: 37px; left: 1287px; top: 56px; position: absolute" src="imagenes/avatar.png" />
-    <div id="nombre-usuario" style="width: 127px; height: 45px; left: 1336px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agricultor</div>
-    <script>
-      const nombre = localStorage.getItem("nombreUsuario");
-      if (nombre) {
-        document.getElementById("nombre-usuario").textContent = nombre;
-      }
-    </script>
+  <div style="width: 1201px; height: 241px; left: 190px; top: 911px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 48px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Con EcoSmart tienes información oportuna<br/><br/>para la toma de desiciones del control de<br/> <br/>tu cosecha</div>
+  <div style="width: 645px; height: 541px; left: 812px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
+  <a href="/Frontend/Agricultor/Alertas/alertas.html"
+    style="width: 401px; height: 89px; left: 934px; top: 1222px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
+    Alertas
+  </a>
+  <img style="width: 116px; height: 116px; left: 1077px; top: 1357px; position: absolute" src="imagenes/alerta verde.png" />
+  <div style="width: 625px; height: 128px; left: 822px; top: 1547px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Controla y protege tus cultivos configurando tus propios rangos de monitoreo. El sistema te alertará automáticamente cuando los datos de tus sensores superen los límites que definas como seguros.</div>
+  <div style="width: 645px; height: 541px; left: 82px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
+  <a href="/Frontend/Agricultor/Monitoreo_de_Cultivos/monitoreo.html"
+    style="width: 401px; height: 89px; left: 198px; top: 1207px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
+    Monitoreo de<br/><br/>Cultivos
+  </a>
+  <img style="width: 185px; height: 185px; left: 312px; top: 1327px; position: absolute" src="imagenes/analisis-de-los-datos.png" />
+  <div style="width: 589px; height: 128px; left: 112px; top: 1543px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Obtén datos precisos y en tiempo real sobre las condiciones clave de tus plantas, como temperatura, humedad, pH y nutrientes, para tomar decisiones informadas.</div>
+  <div style="width: 344px; height: 106px; left: 23px; top: 77px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
+  <img style="width: 76px; height: 76px; left: 157px; top: 39px; position: absolute" src="imagenes/plantacion (6).png" />
+  <img style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
+  <div style="width: 1077px; height: 368px; left: 43px; top: 162px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">EcoSmart nace como respuesta a desafíos como el cambio climático,  la escasez de recursos hídricos y reducir el impacto ambiental de las <br/>prácticas agrícolas tradicionales, proporcionando una <br/>plataforma integral que aprovecha tecnologías de <br/>vanguardia para revolucionar la forma en que <br/>se gestiona la agricultura, desde pequeñas <br/>explotaciones hasta operaciones <br/>comerciales a gran <br/>escala.</div>
+  <div style="width: 223px; height: 72px; left: 1270px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
+  <img style="width: 37px; height: 37px; left: 1287px; top: 56px; position: absolute" src="imagenes/avatar.png" />
+  <div id="nombre-usuario-agricultor" style="width: 127px; height: 45px; left: 1336px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agricultor</div>
+  <script>
+    const nombre = localStorage.getItem("nombreUsuario");
+    if (nombre) {
+      document.getElementById("nombre-usuario-agricultor").textContent = nombre;
+    }
+  </script>
 
+  <!-- 
+  Menú desplegable oculto 
+  -->
+  <div id="menuOpciones" style="display: none; width: 203px; position: absolute; top: 120px; left: 1270px; background: #344E41; border-radius: 10px; padding: 10px;">
+    <a href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
+      style="display: flex; justify-content: center; color: white; text-decoration: none; font-family: IBM Plex Mono; font-weight: 550; font-size: 18px;">
+      Cerrar sesión
+    </a>
   </div>
+
+  <script>
+    // Mostrar/ocultar menú al hacer clic en el avatar o nombre
+    const avatar = document.querySelector('img[src="imagenes/avatar.png"]');
+    const nombreUsuario = document.getElementById("nombre-usuario-agricultor");
+    const menu = document.getElementById("menuOpciones");
+
+    function toggleMenu() {
+      menu.style.display = (menu.style.display === "none" || menu.style.display === "") ? "block" : "none";
+    }
+
+    avatar.addEventListener("click", toggleMenu);
+    nombreUsuario.addEventListener("click", toggleMenu);
+  </script>
+</div>
